# NetLibpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_qhull.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: .cibuildwheel.yaml
github/actions/: .cibuildwheel.yaml
github/workflows/: .cibuildwheel.yaml
include/: Point_t.cpp  Simplex_t.cpp  combinatorics.cpp  find_comb.cpp
include/quadprog/: Array.hpp  QuadProg++.cpp
netlibpp/: __init__.pyi
netlibpp/src/: CMakeLists.txt
netlibpp/src/include/: AlphaComplex.cpp  Complex_t.cpp  DelaunayRipsComplex.cpp  LpComplex.cpp  Point_t.cpp  Simplex_t.cpp  VRComplex.cpp  bindings.cpp  combinatorics.cpp  find_comb.cpp  graph_func.cpp
netlibpp/src/include/linalg/: gramSchmidt.cpp  linalg.cpp
netlibpp/src/include/quadprog/: QuadProg++.cpp
netlibpp/src/include/util/: matrix.cpp
netlibpp/src/testing/: Lptest.py  test.ipynb  test.py  test_complex.ipynb  test_simplex.ipynb  test_time.ipynb
testing/: Lptest.py  test.ipynb  test_simplex.ipynb
