
[build-system]
requires = ["setuptools<72.2", "wheel", "pybind11>=2.6.0"] 
build-backend = "setuptools.build_meta"


[project]
name = "netlibpp"
version = "0.0.10"
description = "A geometric Python lib"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["sample", "setuptools", "development"]


authors = [{ name = "Victor", email = "vactor.pavlov.vadimovich@gmail.com" }]
maintainers = [
  { name = "Victor", email = "vactor.pavlov.vadimovich@gmail.com" },
]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]


[project.optional-dependencies]
dev = ["check-manifest"]

[project.urls]
"Source" = "https://github.com/Kurkuzabra/NetLibpp/blob/develop/include/graph_func.cpp"


[tool.cibuildwheel]

test-command = "echo 'installed'"

manylinux-x86_64-image = "quay.io/pypa/manylinux_2_34_x86_64:latest"
# manylinux-i686-image = "manylinux2014"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_34_aarch64:latest"
# manylinux-ppc64le-image = "manylinux2014"
# manylinux-s390x-image = "manylinux2014"
# manylinux-armv7l-image = "manylinux_2_31"
manylinux-pypy_x86_64-image = "quay.io/pypa/manylinux_2_34_x86_64:latest"
# manylinux-pypy_i686-image = "manylinux2014"
manylinux-pypy_aarch64-image = "quay.io/pypa/manylinux_2_34_aarch64:latest"

musllinux-x86_64-image = "musllinux_1_2"
musllinux-i686-image = "musllinux_1_2"
musllinux-aarch64-image = "musllinux_1_2"
musllinux-ppc64le-image = "musllinux_1_2"
musllinux-s390x-image = "musllinux_1_2"
musllinux-armv7l-image = "musllinux_1_2"

[tool.cibuildwheel.linux]
# archs = ["x86_64", "aarch64"]
archs = ["x86_64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.cibuildwheel.macos]
archs = ["arm64"]
environment = "MACOSX_DEPLOYMENT_TARGET=12.0"
before-build = "brew install gcc libomp"